--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "archie",
-  "name": "archie",
+  "short_name": "noori-ui",
+  "name": "noori-ui",
   "icons": [
     {
       "src": "favicon.ico",
