--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "dist"
   ],
   "dependencies": {
+    "@types/react-modal": "^3.13.1",
+    "react-modal": "^3.14.4",
     "styled-components": "^5.2.1"
   },
   "lint-staged": {
