--- a/package.json
+++ b/package.json
@@ -43,18 +43,19 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "lint:fix": "npx prettier --write .",
     "test:ci": "run-s test:unit test:lint test:build",
     "test": "jest --watch",
     "test:build": "run-s build",
-    "test:lint": "eslint . --ext .ts,.tsx",
-    "test:prettier": "npx prettier --check .",
+    "test:lint": "npx prettier --check .",
     "test:unit": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "next": "^12.0.4"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.10",
@@ -72,10 +73,11 @@
     "jest-styled-components": "^7.0.3",
     "lint-staged": "^12.1.2",
     "microbundle-crl": "^0.13.11",
+    "next": "^12.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-jest": "^26.5.3",
     "typescript": "^3.7.5"
   },
