--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "example",
+    "src/stories",
     "**/test.ts",
     "**/test.tsx",
     "**/*.test.tsx",
