--- a/.github/workflows/bundlephobia.yml
+++ b/.github/workflows/bundlephobia.yml
@@ -1,4 +1,4 @@
-name: "check my bundlephobia"
+name: "check dependencies with bundlephobia"
 on:
   pull_request:
     branches: [main]
@@ -6,8 +6,9 @@ jobs:
   bundlecheck:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: carlesnunez/check-my-bundlephobia@v1
+      - uses: actions/checkout@v2
+      - name: bundlephobia-checker
+        uses: carlesnunez/check-my-bundlephobia@v1.7.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           strict: true
