--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run unit tests
-        run: npm run test:unit
+        run: npm test
       - name: Test build
         run: npm run test:build
