--- a/.github/workflows/publishv2.yml
+++ b/.github/workflows/publishv2.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # Setup .npmrc file to publish to npm
+      - run: echo ref is ${{ github.ref }}
+      - run: echo sha is ${{ github.sha }}
       - uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version-file: ".nvmrc"
           registry-url: "https://registry.npmjs.org"
-      # - run: npm ci
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
